@@ -6055,6 +6055,34 @@ Specify the video size for the output. Default value is @code{640x512}.
 @item slide
 Specify if the spectrum should slide along the window. Default value is
 @code{0}.
+@item mode
+Specify display mode. Can be either @code{combined}: all channels are
+displayed in the same row, or @code{separate}: all channels are displayed
+in separate rows. Default value is @code{combined}.
+@item color
+Specify display color mode. Can be either @code{channel}: each channel
+is displayed in a separate color, or @code{intensity}: each channel is
+displayed using the same color scheme. Default value is @code{channel}.
+@item scale
+Specify scale used for calculating intensity color values.
+
+It accepts the following values:
+@table @option
+@item{lin}
+linear
+@item{sqrt}
+square root, default
+@item{cbrt}
+cubic root
+@item{log}
+logarithmic
+@end table
+
+@item saturation
+Set saturation modifier for displayed colors. Negative values provide
+alternative color scheme. @code{0} is no saturation at all.
+Saturation must be in [-10.0, 10.0] range.
+Default value is @code{1}.
 @end table
 
 The usage is very similar to the showwaves filter; see the examples in that
